@@ -331,81 +331,6 @@ free memory to automatically analyze the problem and send a report to the develo
                 self.ui_shutdown()
                 sys.exit(1)
 
-    def create_crash_bug_title(self):
-        '''Create an appropriate standard bug title for a crash report.
-
-        This contains the topmost function name from the stack trace and the
-        signal (for signal crashes) or the Python exception (for unhandled
-        Python exceptions).
-
-        Return None if the report is not a crash or a default title could not
-        be generated.'''
-
-        # signal crash
-        if self.report.has_key('Signal') and \
-            self.report.has_key('ExecutablePath') and \
-            self.report.has_key('StacktraceTop'):
-
-            signal_names = {
-                '4': 'SIGILL',
-                '6': 'SIGABRT',
-                '8': 'SIGFPE',
-                '11': 'SIGSEGV',
-                '13': 'SIGPIPE'
-            }
-
-            fn = ''
-            for l in self.report['StacktraceTop'].splitlines():
-                fname = l.split('(')[0].strip()
-                if fname != '??':
-                    fn = ' in %s()' % fname
-                    break
-
-            arch_mismatch = ''
-            if self.report.has_key('Architecture') and \
-                self.report.has_key('PackageArchitecture') and \
-                self.report['Architecture'] != self.report['PackageArchitecture'] and \
-                self.report['PackageArchitecture'] != 'all':
-                arch_mismatch = ' [non-native %s package]' % self.report['PackageArchitecture']
-
-            return '[apport] %s crashed with %s%s%s' % (
-                os.path.basename(self.report['ExecutablePath']),
-                signal_names.get(self.report.get('Signal'),
-                    'signal ' + self.report.get('Signal')),
-                fn, arch_mismatch
-            )
-
-        # Python exception
-        if self.report.has_key('Traceback') and \
-            self.report.has_key('ExecutablePath'):
-
-            trace = self.report['Traceback'].splitlines()
-
-            if len(trace) < 1:
-                return Nonr
-            if len(trace) < 3:
-                return '[apport] %s crashed with %s' % (
-                    os.path.basename(self.report['ExecutablePath']),
-                    trace[0])
-            return '[apport] %s crashed with %s in %s()' % (
-                os.path.basename(self.report['ExecutablePath']),
-                trace[-1].split(':')[0],
-                trace[-3].split()[-1]
-            )
-
-        # package problem
-        if self.report.get('ProblemType') == 'Package' and \
-            self.report.has_key('Package'):
-
-            title = '[apport] package %s failed to install/upgrade' % \
-                self.report['Package']
-            if self.report.get('ErrorMessage'):
-                title += ': ' + self.report['ErrorMessage'].splitlines()[-1]
-
-            return title
-
-        return None
-
     def open_url(self, url):
         '''Open the given URL in a new browser window.
 
@@ -977,108 +902,6 @@ CoreDump: base64
                 'progress dialog for package bug info collection')
             self.assertEqual(self.ui.ic_progress_active, False,
                 'progress dialog for package bug info collection finished')
-
-        def test_create_crash_bug_title(self):
-            '''Test create_crash_bug_title().'''
-
-            self.ui.report = apport.Report()
-            self.assertEqual(self.ui.create_crash_bug_title(), None)
-
-            # named signal crash
-            self.ui.report['Signal'] = '11'
-            self.ui.report['ExecutablePath'] = '/bin/bash'
-            self.ui.report['StacktraceTop'] = '''foo()
-bar(x=3)
-baz()
-'''
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with SIGSEGV in foo()')
-
-            # unnamed signal crash
-            self.ui.report['Signal'] = '42'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with signal 42 in foo()')
-
-            # do not crash on empty StacktraceTop
-            self.ui.report['StacktraceTop'] = ''
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with signal 42')
-
-            # do not create bug title with unknown function name
-            self.ui.report['StacktraceTop'] = '??()\nfoo()'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with signal 42 in foo()')
-
-            # if we do not know any function name, don't mention ??
-            self.ui.report['StacktraceTop'] = '??()\n??()'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with signal 42')
-
-            # Python crash
-            self.ui.report = apport.Report()
-            self.ui.report['ExecutablePath'] = '/usr/share/apport/apport-gtk'
-            self.ui.report['Traceback'] = '''Traceback (most recent call last):
-  File "/usr/share/apport/apport-gtk", line 202, in <module>
-    app.run_argv()
-  File "/var/lib/python-support/python2.5/apport/ui.py", line 161, in run_argv
-    self.run_crashes()
-  File "/var/lib/python-support/python2.5/apport/ui.py", line 104, in run_crashes
-    self.run_crash(f)
-  File "/var/lib/python-support/python2.5/apport/ui.py", line 115, in run_crash
-    response = self.ui_present_crash(desktop_entry)
-  File "/usr/share/apport/apport-gtk", line 67, in ui_present_crash
-    subprocess.call(['pgrep', '-x',
-NameError: global name 'subprocess' is not defined'''
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] apport-gtk crashed with NameError in ui_present_crash()')
-
-            # slightly weird Python crash
-            self.ui.report = apport.Report()
-            self.ui.report['ExecutablePath'] = '/usr/share/apport/apport-gtk'
-            self.ui.report['Traceback'] = '''TypeError: Cannot create a consistent method resolution
-order (MRO) for bases GObject, CanvasGroupableIface, CanvasGroupable'''
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] apport-gtk crashed with TypeError: Cannot create a consistent method resolution')
-
-            # package install problem
-            self.ui.report = apport.Report('Package')
-            self.ui.report['Package'] = 'bash'
-
-            # no ErrorMessage
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] package bash failed to install/upgrade')
-
-            # empty ErrorMessage
-            self.ui.report['ErrorMessage'] = ''
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] package bash failed to install/upgrade')
-
-            # nonempty ErrorMessage
-            self.ui.report['ErrorMessage'] = 'botched\nnot found\n'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] package bash failed to install/upgrade: not found')
-
-            # matching package/system architectures
-            self.ui.report['Signal'] = '11'
-            self.ui.report['ExecutablePath'] = '/bin/bash'
-            self.ui.report['StacktraceTop'] = '''foo()
-bar(x=3)
-baz()
-'''
-            self.ui.report['PackageArchitecture'] = 'amd64'
-            self.ui.report['Architecture'] = 'amd64'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with SIGSEGV in foo()')
-
-            # non-native package (on multiarch)
-            self.ui.report['PackageArchitecture'] = 'i386'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with SIGSEGV in foo() [non-native i386 package]')
-
-            # Arch: all package (matches every system architecture)
-            self.ui.report['PackageArchitecture'] = 'all'
-            self.assertEqual(self.ui.create_crash_bug_title(),
-                '[apport] bash crashed with SIGSEGV in foo()')
 
         def test_handle_duplicate(self):
             '''Test handle_duplicate().'''
