@@ -31,8 +31,11 @@ apport (0.79) UNRELEASED; urgency=low
     opened URLs.
   * debian/rules: Install the crashdb implementations in backends/ into
     apport/, and remove them again on clean.
+  * apport/{report,ui}.py: Move UserInterface.create_crash_bug_title() and its
+    test cases to Report.standard_title(). It is much more appropriate there
+    and can be used in the retracer as well.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 10 May 2007 01:08:11 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 11 May 2007 15:30:25 +0200
 
 apport (0.78) gutsy; urgency=low
 
